[package]
name = "rotated_image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
eframe = { git = "https://github.com/emilk/egui", branch = "master", features = [] }
egui_extras = { git = "https://github.com/emilk/egui", branch = "master", features = [
    "image",
    "file",
    "http",
] }
image = { version = "0.24.7", features = ["jpeg"] }
